--- a/python/sequences.ipynb
+++ b/python/sequences.ipynb
@@ -895,6 +895,93 @@
     "    [[0, 0], [1, 1], [2, 4], [3, 9], [4, 16], [5, 25], [6, 36], [7, 49]]\n",
     "    $$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. Computes $ \\pi/4 $ using the series expansion of $ \\arctan(x)$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7854481533989477"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "N = 5000\n",
+    "\n",
+    "Nth_partial = [ ((-1)**n )/(2*n+1) for n in range(0, N + 1)]\n",
+    "sum(Nth_partial)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. Computes the 2000th partial sum of the alternating harmonic series"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.6928972430599403"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "N = 2000\n",
+    "\n",
+    "Nth_partial = [ ( (-1)**n ) / n for n in range(1, N + 1) ]\n",
+    "sum(Nth_partial)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. List comprehension for a list of lists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0, 0], [1, 1], [2, 4], [3, 9], [4, 16], [5, 25], [6, 36], [7, 49]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "N = 7\n",
+    "\n",
+    "the_list = [ [i, i**2] for i in range(0, N + 1) ]\n",
+    "print(the_list)"
+   ]
   }
  ],
  "metadata": {
@@ -913,7 +1000,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
